# ralph-to-ralph

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  Makefile  ONBOARDING-PLAN.md  PRODUCTION-HARDEN-LOOP.md  README.md  biome.json  build-prompt.md  build-ralph.sh  docker-compose.dev.yml  drizzle.config.ts  inspect-prompt.md  inspect-ralph.sh  inspect-spec.md  onboard-prompt.md  onboard.sh  package-lock.json  package.json  prd.json  qa-prompt.md  qa-ralph.sh  ralph-config.json  ralph-watchdog.sh  test-a.txt  test-b.txt  tsconfig.tsbuildinfo  vitest.config.ts
.claude/: settings.json
.claude/skills/ralph-to-ralph-onboard/templates/python-fastapi/: BUILD_GUIDE.md  Makefile  makefile-targets.mk  pyproject.toml  setup.cfg
.claude/skills/ralph-to-ralph-onboard/templates/python-fastapi/app/: main.py
.scratch/: watchdog-live-smoke.sh
docs/: future-cloud-providers.md  onboarding-guide.md
ralph/: architecture-prompt.md  build-prompt.md  build-ralph.sh  cost-log.json  deployment-profiles.json  ever-cli-reference.md  failure-log.json  harden-watchdog.sh  inspect-prompt.md  inspect-ralph.sh  inspect-spec.md  onboard-prompt.md  onboard.sh  pre-setup.md  qa-prompt.md  qa-ralph.sh  ralph-state.schema.json  ralph-state.template.json  ralph-watchdog.sh  stack-profiles.md  structure-prompt.md
schemas/: architecture-decision.schema.json  harden-gap.schema.json  prd-item.schema.json  qa-report-entry.schema.json  ralph-config.schema.json
scripts/: generate-demo-keys.sh  preflight.sh  scrape-docs-requirements.txt  scrape-docs.py  start.sh  (+1 more)
(+45 files in other folders)
